[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/finder/theme/default.tres" type="Theme" id=1]
[ext_resource path="res://addons/finder/ui/file_item_list/file_item.gd" type="Script" id=2]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="FileItem" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_minimum_size = Vector2( 0, 40 )
focus_neighbor_left = NodePath("MarginContainer/HBoxContainer/VBoxContainer/ItemList")
focus_neighbor_right = NodePath("MarginContainer/HBoxContainer/VBoxContainer/ItemList")
focus_mode = 2
theme = ExtResource( 1 )
theme_override_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1024.0
offset_bottom = 600.0
mouse_filter = 2
color = Color( 1, 1, 1, 0 )

[node name="AccentColorRect" type="ColorRect" parent="."]
visible = false
offset_right = 2.0
offset_bottom = 600.0
custom_minimum_size = Vector2( 2, 0 )
size_flags_horizontal = 0

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_right = 1024.0
offset_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_right = 8
theme_override_constants/margin_top = 4
theme_override_constants/margin_left = 8
theme_override_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
offset_left = 8.0
offset_top = 4.0
offset_right = 1016.0
offset_bottom = 596.0
mouse_filter = 2
theme_override_constants/separation = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
offset_right = 951.0
offset_bottom = 592.0
size_flags_horizontal = 3
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
offset_right = 951.0
offset_bottom = 296.0
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
offset_right = 2.0
offset_bottom = 296.0
theme_override_constants/margin_right = 2

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/MarginContainer"]
offset_bottom = 296.0
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/MarginContainer/CenterContainer"]
offset_top = 148.0
offset_bottom = 148.0
mouse_filter = 2

[node name="FileName" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
offset_left = 2.0
offset_top = 141.0
offset_right = 2.0
offset_bottom = 155.0
valign = 1

[node name="FilePath" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
offset_left = 2.0
offset_top = 141.0
offset_right = 951.0
offset_bottom = 155.0
size_flags_horizontal = 3
valign = 1
clip_text = true

[node name="ItemList" type="ItemList" parent="MarginContainer/HBoxContainer/VBoxContainer"]
offset_top = 296.0
offset_right = 951.0
offset_bottom = 592.0
custom_minimum_size = Vector2( 0, 25 )
focus_neighbor_left = NodePath("../../../..")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath("../../../..")
focus_neighbor_bottom = NodePath(".")
focus_mode = 1
size_flags_vertical = 3

[node name="CenterContainer2" type="MarginContainer" parent="MarginContainer/HBoxContainer"]
offset_left = 956.0
offset_right = 1008.0
offset_bottom = 592.0
mouse_filter = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/CenterContainer2"]
offset_left = 2.0
offset_top = 271.0
offset_right = 52.0
offset_bottom = 321.0
custom_minimum_size = Vector2( 50, 50 )
mouse_filter = 2
size_flags_vertical = 6
expand = true

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="gui_input" from="MarginContainer" to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="MarginContainer" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer" to="." method="_on_mouse_exited"]
[connection signal="focus_entered" from="MarginContainer/HBoxContainer/VBoxContainer/ItemList" to="." method="_on_item_list_focus_entered"]
[connection signal="focus_exited" from="MarginContainer/HBoxContainer/VBoxContainer/ItemList" to="." method="_on_item_list_focus_exited"]
[connection signal="item_activated" from="MarginContainer/HBoxContainer/VBoxContainer/ItemList" to="." method="_on_item_activated"]
[connection signal="mouse_entered" from="MarginContainer/HBoxContainer/VBoxContainer/ItemList" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/HBoxContainer/VBoxContainer/ItemList" to="." method="_on_mouse_exited"]
